changing up the architecture to use DI instead and have a manually added startup class fella :)

--- a/HeartBeatSnooper/HeartBeatSnooper.csproj
+++ b/HeartBeatSnooper/HeartBeatSnooper.csproj
@@ -5,6 +5,7 @@
     <UserSecretsId>1a72ac28-3c51-4429-903f-34bbe6e10f80</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.CosmosDB" Version="4.0.0" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.SendGrid" Version="3.0.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
