added common contract project, implemented polly and http client kit. Almost ready to test sending actual pings

--- a/FileSnooper/appsettings.json
+++ b/FileSnooper/appsettings.json
@@ -34,5 +34,8 @@
 
   ],
   "FileTypeToMonitor": "*.cs",
-  "SnoopDelayInMinutes": 2
+  "SnoopDelayInMinutes": 2,
+  "AzureHeartBeatServiceHostBase": "test.com",
+  "Identifier": "Snooper1",
+  "AzureHeartBeatServiceFunctionUrlPath":  ""
 }
