--- a/FileSnooper/appsettings.Development.json
+++ b/FileSnooper/appsettings.Development.json
@@ -34,5 +34,8 @@
 
   ],
   "FileTypeToMonitor": "*.cs",
-  "SnoopDelayInMinutes": 2
+  "SnoopDelayInMinutes": 2,
+  "AzureHeartBeatServiceHostBase": "azurewebsites.com",
+  "Identifier": "Snooper1",
+  "AzureHeartBeatServiceFunctionUrlPath": "/api/Ping?code=34234"
 }
