adding the IOptions pattern for file paths, service changes, json behaviour changes

--- a/FileSnooper/appsettings.Development.json
+++ b/FileSnooper/appsettings.Development.json
@@ -4,8 +4,7 @@
     "MinimumLevel": {
       "Default": "Debug",
       "Override": {
-        "Microsoft": "Warning",
-        "System": "Warning"
+        "System.Net.Http.HttpClient.AzureHeartBeat.ClientHandler": "Verbose"
       }
     },
     "Properties": {
@@ -33,8 +32,8 @@
     }
 
   ],
-  "FileTypeToMonitor": "*.cs",
-  "SnoopDelayInMinutes": 2,
+  "FileTypeToMonitor": "*.sql",
+  "SnoopDelayInMinutes": 1,
   "AzureHeartBeatServiceHostBase": "azurewebsites.com",
   "Identifier": "Snooper1",
   "AzureHeartBeatServiceFunctionUrlPath": "/api/Ping?code=34234"
