--- a/FileSnooper.Contracts/FileSnooper.Contracts.csproj
+++ b/FileSnooper.Contracts/FileSnooper.Contracts.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="System.Text.Json" Version="6.0.0" />
+  </ItemGroup>
+
 </Project>
