quite alot of chopping and changing with nuget to the MongoAzureDBService running from the contracts project

--- a/HeartBeatSnooper/HeartBeatSnooper.csproj
+++ b/HeartBeatSnooper/HeartBeatSnooper.csproj
@@ -5,12 +5,16 @@
     <UserSecretsId>1a72ac28-3c51-4429-903f-34bbe6e10f80</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="Services\IAzureCosmosDBService.cs" />
+    <Compile Remove="Services\MongoAzureDBService.cs" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.CosmosDB" Version="4.0.0" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.SendGrid" Version="3.0.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.1.1" />
-    <PackageReference Include="MongoDB.Driver" Version="2.18.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.19.0" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
