changes interfaces a bit, got some good generic filtering going on for Mongo

--- a/HeartBeatSnooperReader/appsettings.Development.json
+++ b/HeartBeatSnooperReader/appsettings.Development.json
@@ -19,5 +19,6 @@
       }
     ]
   },
-  "WorkerServiceDelayInSeconds": 15
+  "WorkerServiceDelayInSeconds": 15,
+  "MinutesToFilterBack": "30;"
 }
