--- a/FileSnooper/FileSnooper.csproj
+++ b/FileSnooper/FileSnooper.csproj
@@ -19,7 +19,9 @@
     <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
   </ItemGroup>
-
+	<PropertyGroup>
+		<ServerGarbageCollection>true</ServerGarbageCollection>
+	</PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\FileSnooper.Contracts\FileSnooper.Contracts.csproj" />
   </ItemGroup>
