--- a/HeartBeatSnooperReader/HeartBeatSnooperReader.csproj
+++ b/HeartBeatSnooperReader/HeartBeatSnooperReader.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Worker;Microsoft.NET.Sdk.Publish">
+﻿<Project Sdk="Microsoft.NET.Sdk.Worker;Microsoft.NET.Sdk.Publish">
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
@@ -6,6 +6,9 @@
     <UserSecretsId>dotnet-HeartBeatSnooperReader-fd44451c-6fec-4c14-9c8e-cf5b5ec57d2c</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
+    <PropertyGroup>
+	    <ServerGarbageCollection>true</ServerGarbageCollection>
+    </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
     <PackageReference Include="Microsoft.NET.Build.Containers" Version="0.3.2" />
@@ -15,5 +18,8 @@
     <PackageReference Include="Serilog.Settings.Configuration" Version="3.4.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FileSnooper.Contracts\FileSnooper.Contracts.csproj" />
   </ItemGroup>
 </Project>
