--- a/HeartBeatSnooperReader/appsettings.json
+++ b/HeartBeatSnooperReader/appsettings.json
@@ -19,5 +19,6 @@
       }
     ]
   },
-  "WorkerServiceDelayInMilliseconds": 15000
+  "WorkerServiceDelayInMilliseconds": 15000,
+  "MinutesToFilterBack":  30
 }
