bunch of changes to MongoAzureDBService, generic filter field def added for bringing back list of records. Added check for postman as well for testing to change json serializer behavior

--- a/FileSnooper.Contracts/FileSnooper.Contracts.csproj
+++ b/FileSnooper.Contracts/FileSnooper.Contracts.csproj
@@ -4,11 +4,13 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UserSecretsId>57d67160-bc5a-4e66-8829-269dca805de3</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
     <PackageReference Include="MongoDB.Driver" Version="2.19.0" />
     <PackageReference Include="System.Text.Json" Version="6.0.0" />
   </ItemGroup>
