--- a/HeartBeatSnooperReader/appsettings.Development.json
+++ b/HeartBeatSnooperReader/appsettings.Development.json
@@ -19,6 +19,6 @@
       }
     ]
   },
-  "WorkerServiceDelayInMilliseconds": 15,
-  "MinutesToFilterBack": "60;"
+  "WorkerServiceDelayInMilliseconds": 15000,
+  "MinutesToFilterBack": 60
 }
