couple of small fixes and config changes

--- a/FileSnooper/appsettings.Development.json
+++ b/FileSnooper/appsettings.Development.json
@@ -23,18 +23,16 @@
   "FileMonitorPaths": [
 
     {
-      "Source": "",
-      "Target": ""
+      "Source": "c:\\temp",
+      "Target": "C:\\CopyOfTemp"
     },
     {
-      "Source": "",
-      "Target": ""
+      "Source": "C:\\Dev",
+      "Target": "C:\\Users\\Test"
     }
 
   ],
-  "FileTypeToMonitor": "*.sql",
-  "SnoopDelayInMinutes": 1,
-  "AzureHeartBeatServiceHostBase": "azurewebsites.com",
-  "Identifier": "Snooper1",
-  "AzureHeartBeatServiceFunctionUrlPath": "/api/Ping?code=34234"
+  "FileTypeToMonitor": "*.cs",
+  "SnoopDelayInMinutes": 2,  
+  "Identifier": "Snooper1"  
 }
