--- a/HeartBeatSnooperReader/appsettings.json
+++ b/HeartBeatSnooperReader/appsettings.json
@@ -19,6 +19,13 @@
       }
     ]
   },
-  "WorkerServiceDelayInMinutes": 3,
-  "MinutesToFilterBack":  60
+  "WorkerServiceDelayInMinutes": 2,
+  "MinutesToFilterBack": 60,
+  "MongoConnectionString": "",
+  "MongoDBName": "",
+  "MongoDBCollection": "",
+  "SendGridApiKey": "",
+  "SendGridEmailAddress": "",
+  "SendGridEmailAddresses": "",
+  "SendGridEmailName": ""
 }
