some settings changes and removal of old service

--- a/FileSnooper/appsettings.Development.json
+++ b/FileSnooper/appsettings.Development.json
@@ -33,6 +33,8 @@
 
   ],
   "FileTypeToMonitor": "*.cs",
-  "SnoopDelayInMinutes": 2,  
-  "Identifier": "Snooper1"  
+  "SnoopDelayInMinutes": 2,
+  "AzureHeartBeatServiceHostBase": "localhost:7262",
+  "Identifier": "Snooper1",
+  "AzureHeartBeatServiceFunctionUrlPath": "/api/HeartBeatChecker"
 }
