removing specific folders to monitor, including all subfolders and moving files to those same folders. Commented out the default heart beat alert

--- a/FileSnooper/FileSnooper.csproj
+++ b/FileSnooper/FileSnooper.csproj
@@ -25,6 +25,14 @@
   <ItemGroup>
     <ProjectReference Include="..\FileSnooper.Contracts\FileSnooper.Contracts.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Update="appsettings.Development.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 
   <ProjectExtensions><VisualStudio><UserProperties appsettings_1development_1json__JsonSchema="https://docs.renovatebot.com/renovate-schema.json" /></VisualStudio></ProjectExtensions>
 </Project>
