--- a/FileSnooper/appsettings.Development.json
+++ b/FileSnooper/appsettings.Development.json
@@ -32,8 +32,8 @@
     }
 
   ],
-  "FileTypeToMonitor": "*.cs",
-  "SnoopDelayInMinutes": 2,
+  "FileTypeToMonitor": "*.*",
+  "SnoopDelayInMinutes": 1,
   "AzureHeartBeatServiceHostBase": "localhost:7262",
   "Identifier": "Snooper1",
   "AzureHeartBeatServiceFunctionUrlPath": "/api/HeartBeatChecker"
